--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "express": "^4.13.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.67.2",
     "watchify": "^3.4.0"
   },
   "scripts": {
@@ -19,6 +22,7 @@
   "description": "A blank project to get Intellisense for React in Visual Studio Code",
   "main": "index.js",
   "devDependencies": {
+    "babel-preset-stage-1": "^6.22.0",
     "typings": "^2.1.0"
   },
   "repository": {
@@ -32,7 +36,7 @@
     "studio",
     "intellisense"
   ],
-  "author": "Didier Franc",
+  "author": "wind85",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/wind85/vscode-react-intellisense/issues"
